RESOLVED FIXED89969
[BlackBerry] Selection items show as garbage for non-ascii characters.
https://bugs.webkit.org/show_bug.cgi?id=89969
Summary [BlackBerry] Selection items show as garbage for non-ascii characters.
Jason Liu
Reported 2012-06-26 04:12:49 PDT
Go to www.meituan.com, on the left up conner, there's a selection . click on the selection to bring up the selection dialog. All the option items which are in Chinese are displayed as garbage.
Attachments
Patch (3.12 KB, patch)
2012-06-26 22:44 PDT, Jason Liu
no flags
Patch (3.12 KB, patch)
2012-06-27 01:25 PDT, Jason Liu
no flags
Jason Liu
Comment 1 2012-06-26 22:44:42 PDT
Jason Liu
Comment 2 2012-06-27 01:25:20 PDT
Yong Li
Comment 3 2012-06-27 07:03:58 PDT
Comment on attachment 149703 [details] Patch Is this internally reviewed?
Crystal Zhang
Comment 4 2012-06-27 07:37:38 PDT
(In reply to comment #3) > (From update of attachment 149703 [details]) > Is this internally reviewed? Looks fine to me.
Rob Buis
Comment 5 2012-06-27 08:26:24 PDT
Comment on attachment 149703 [details] Patch Would it be possible to have an automated test for this?
Jason Liu
Comment 6 2012-06-27 18:52:34 PDT
(In reply to comment #5) > (From update of attachment 149703 [details]) > Would it be possible to have an automated test for this? Each porting has a different implementation for popUp dialog. So it is hard to write a automated test.
Antonio Gomes
Comment 7 2012-06-28 12:52:23 PDT
(In reply to comment #6) > (In reply to comment #5) > > (From update of attachment 149703 [details] [details]) > > Would it be possible to have an automated test for this? > > Each porting has a different implementation for popUp dialog. > So it is hard to write a automated test. I would as for a manual test, but not sure people actually run it :s
Jason Liu
Comment 8 2012-06-28 20:22:39 PDT
(In reply to comment #7) > (In reply to comment #6) > > (In reply to comment #5) > > > (From update of attachment 149703 [details] [details] [details]) > > > Would it be possible to have an automated test for this? > > > > Each porting has a different implementation for popUp dialog. > > So it is hard to write a automated test. > > I would as for a manual test, but not sure people actually run it :s Would you approve this patch? : )
WebKit Review Bot
Comment 9 2012-06-28 21:20:32 PDT
Comment on attachment 149703 [details] Patch Clearing flags on attachment: 149703 Committed r121516: <http://trac.webkit.org/changeset/121516>
WebKit Review Bot
Comment 10 2012-06-28 21:20:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.