[BlackBerry] Selection items show as garbage for non-ascii characters. https://bugs.webkit.org/show_bug.cgi?id=89969

Add charset utf-8 to the select popup's page.

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-06-28
Reviewed by Antonio Gomes.

.:

* ManualTests/blackberry/select-popup-items-unicode-display.html: Added.

Source/WebKit/blackberry:

* WebCoreSupport/SelectPopupClient.cpp:
(WebCore::SelectPopupClient::generateHTML):

Canonical link: https://commits.webkit.org/108083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121516 268f45cc-cd09-0410-ab3c-d52691b4dbfc